--- a/src/views/sustituciones.form
+++ b/src/views/sustituciones.form
@@ -34,7 +34,7 @@
           <Color blue="36" green="43" red="f4" type="rgb"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\N3id3r\Desktop\iconsproyectos\Save_48px.png"/>
+          <Image iconType="2" name="C:\Users\N3id3r\Desktop\git\projects\university\src\images\Save_48px.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Generar Cambio"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -55,7 +55,7 @@
       <Properties>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\N3id3r\Desktop\iconsproyectos\Player Change_48px.png"/>
+          <Image iconType="2" name="C:\Users\N3id3r\Desktop\git\projects\university\src\images\Player Change_48px.png"/>
         </Property>
       </Properties>
       <Constraints>
@@ -95,7 +95,7 @@
           <Color blue="36" green="43" red="f4" type="rgb"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\N3id3r\Desktop\iconsproyectos\Cancel_48px_1.png"/>
+          <Image iconType="2" name="C:\Users\N3id3r\Desktop\git\projects\university\src\images\Cancel_48px_1.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Cancel"/>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
